--- a/bhtThesis.bib
+++ b/bhtThesis.bib
@@ -28,3 +28,10 @@
 	organization={mbed}
 }
 %% die oberen sind als Beispiele drin gelassen worden. Kommen aber zur Abgabe raus.
+
+@manual{bib.jFXRaspPi,
+	address={\url{https://blogs.oracle.com/java/entry/developer_preview_of_java_se}},
+	title={JavaFX für das Raspberry Pi},
+	year={2012},
+	organization={Oracle}
+}
