--- a/titlepage_julian.tex
+++ b/titlepage_julian.tex
@@ -24,13 +24,13 @@
 		\\
 		\vspace{0.8cm}
 		Eingereicht am \\
-		10. Juli 2013 %\today % Aktuelles Datum
+		\today %10. Juli 2013 % Aktuelles Datum
 		\vspace{0.8cm}
 		
 		Eingereicht von \\
 		\begin{tabular}{ll}
-			Matthias Hansert & s42\\
-			Markus Perkowski & s42\\
+			Matthias Hansert & s791744\\
+			Marcus Perkowski & s798936\\
 			Björn Hepner & s798148\\
 			Julian Zoellner & s798465\\
 			Niklas Knauer & s798163\\
