--- a/bhtThesis.bib
+++ b/bhtThesis.bib
@@ -30,7 +30,7 @@
 %% die oberen sind als Beispiele drin gelassen worden. Kommen aber zur Abgabe raus.
 
 @manual{bib.jFXRaspPi,
-	address={\url{https://blogs.oracle.com/java/entry/developer_preview_of_java_se}},
+	address={\url{https://blogs.oracle.com/java/entry/developer\_preview\_of\_java\_se}},
 	title={JavaFX für das Raspberry Pi},
 	year={2012},
 	organization={Oracle}
