Kapitel 2 ohne Fehler

--- a/main.tex
+++ b/main.tex
@@ -33,6 +33,7 @@
 \usepackage{bytefield}
 \definecolor{light-gray}{gray}{0.90} %Code Hintergrundfarbe
 
+\usepackage{longtable}
 
 %%
 %% Pfad zu den Bildern
