--- a/kapitel2/ch2.tex
+++ b/kapitel2/ch2.tex
@@ -10,12 +10,27 @@
 %%	
 \chapter{Raspberry Pi}
 
+\lstset{language=C,
+				backgroundcolor=\color{light-gray},
+				%frame=single,
+				tabsize=2,
+				%numbers=left,
+				numbersep=5pt,
+				%numberstyle=\color{light-gray},
+				basicstyle=\ttfamily\color{black}\small,
+				keywordstyle=\color{HKS51}\bfseries,
+				commentstyle=\color{HKS13}\slshape,,
+				identifierstyle=\color{blue},
+				stringstyle =\color{orange}}
+				
+				
 Das Raspberry Pi ist ein kreditkartengroßer Einplatinencomputer von der \textit{Raspberry Pi Foundation}\footnote{Stiftung und Wohltätigkeitsorganisation in Großbritannien} entwickelt wurde. Mithilfe seiner 700 MHz starken ARM-CPU kann er nahezu alles was auch normale Desktoprechner können.\\
-Ziel der Entwicklung des Raspberry Pi ist das Interesse an dem Studium der Informatik und ähnliche Fachgebiete zu fordern, bwz. einen günstigen Computer zum Programmieren und Experimentieren anbieten zu können.\\
+
+Ziel der Entwicklung des Raspberry Pi ist das Interesse an dem Studium der Informatik und ähnliche Fachgebiete zu fordern, bzw. einen günstigen Computer zum Programmieren und Experimentieren anbieten zu können.\\
 
 Durch die geringe Leistungsaufnahme, günstigen Preis und viele verschiedene Ausbau- und Personalisierungsmöglichkeiten können Raspberry Pi’s für verschiedene Zwecke eingesetzt werden. Unter anderem sind beliebte Projekte für den Haushalt Wetterstationen, Radiosender, Media Center, NAS, etc.
 
-
+\newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Hardware}
@@ -24,7 +39,7 @@ Durch die geringe Leistungsaufnahme, günstigen Preis und viele verschiedene Aus
 
 \begin{figure}[h]
   \begin{center}		%width=\linewidth
-    \includegraphics[scale=0.4]{raspberrypi-model-b.png}
+    \includegraphics[scale=0.6]{raspberrypi-model-b.png}
   		  \caption{Raspberry Pi Model B}
      \label{raspPic}
   \end{center}
@@ -36,14 +51,14 @@ Durch die geringe Leistungsaufnahme, günstigen Preis und viele verschiedene Aus
 Testfall & Fehler\\ \hline\hline
 \endfirsthead
 \hline
-Testfall & Fehler & Kommentar & Errorcode \\ \hline\hline
+Testfall & Fehler \\ \hline\hline
 \endhead
 
 Größe & 85,60 x 53,98 x 17 mm\\ \hline
 Soc & Broadcom BCM2835\\ \hline
 CPU & ARM1176JZF-S(700MHz)\\ \hline
 GPU & Broadcom VideoCore IV \\ \hline
-SDRAM & 512MB
+SDRAM & 512MB\\ \hline
 USB 2.0 & 2\\ \hline
 Videoausgabe & HDMI \& S-Video\\ \hline
 Tonausgabe & 3,5mm Klinkenstecker \& HDMI\\ \hline
@@ -54,6 +69,9 @@ Stromversorgung & 5V Micro-USB Anschluss\\ \hline
 
 \end{longtable}
 \footnote{http://www.raspberrypiguide.de; http://www.raspberrypi.org; 15.01.2014}
+
+
+\newpage
 
 %%-------------------------------------------------------------------
 \subsection{Kamera}
@@ -73,14 +91,13 @@ Stromversorgung & 5V Micro-USB Anschluss\\ \hline
 Testfall & Fehler\\ \hline\hline
 \endfirsthead
 \hline
-Testfall & Fehler & Kommentar & Errorcode \\ \hline\hline
+Testfall & Fehler \\ \hline\hline
 \endhead
 
 Größe & 20 x 24 mm\\ \hline
 Sensor & OmniVision OV5647 (5MP)\\ \hline
 Auflösung & 2592 x 1944\\ \hline
 Video & 1080p \@ 30fps \\ \hline
-SDRAM & 512MB
 Anschluss & 15-Pin Flachbandkabel\\ \hline
 
 \end{longtable}
@@ -113,26 +130,72 @@ sudo apt-get install php5-mysql
 
 %%-------------------------------------------------------------------
 \subsection{SSH Zugriff}
-Damit das Team gleichzeitig auf das Raspberry Pi arbeiten konnte wurde auf das System eine SSH-Verbindung eingestellt. So wurden auch Entwicklungskosten gesparrt, weil nicht jeder Teammitgleid ein System benötigte.\\
-Um das Raspberry Pi per Fernzugriff zu betreiben ist es nötig eine \textit{Secure Shell} Verbindung aufzubauen. Aus Sicherheitsgründen wurde der Standardport für SSH-Verbindungen (Port 22) auf ein anderes geändert. Durch die Verfügung einer SSH-Verbindung können Updates, Support und Wartungsarbeiten per Fernzugriff auf das System ausgeübt werden, dieses sparrt kosten für den Kunden sowie für den Support.
+Damit das Team gleichzeitig auf das Raspberry Pi arbeiten konnte wurde auf das System eine SSH-Verbindung eingestellt. So wurden auch Entwicklungskosten gespart, weil nicht jeder Teammitglied ein System benötigte.\\
 
+Um das Raspberry Pi per Fernzugriff zu betreiben ist es nötig eine \textit{Secure Shell} Verbindung aufzubauen. Durch die Verfügung einer SSH-Verbindung können Updates, Support und Wartungsarbeiten per Fernzugriff auf das System ausgeübt werden, dieses spart kosten für den Kunden sowie für den Support.
+
+Als Sicherheitsmaßnahmen wurde der Standardport für SSH-Verbindungen (Port 22) auf ein anderen Port geändert und eine Public Key Authentifizierung implementiert. Um den Port für die SSH-Verbindung zu ändern, muss in der Datei \textit{/etc/ssh/sshd\_config} der Wert \textit{\#Port} auf den gewünschten Wert gesetzt werden. Danach muss das Dienst neu gestartet werden und somit ist der neue Port eingestellt.\\
+
+Die Public Key Authentifizierung erfolgt indem der Benutzer ein privaten und einen öffentlichen Schlüssel erstellt. Der private Schlüssel wird am Client gespeichert und der öffentlicher Schlüssel am Server. Mit dem Befehl
+
+\begin{lstlisting}
+ssh-keygen -t dsa
+\end{lstlisting}
+
+werden die Schlüsseln generiert. Hier muss der Benutzer ein Passwort eingeben, mit dem sich er am Server anmelden wird. In der Regel heißen beider Schlüssel \textit{id\_das} und \textit{id\_das.pub}. Der private Schlüssel muss an das Client bekannt gemacht werden, indem man in der \textit{/ssh2/identification} Datei die Zeile 
+
+\begin{lstlisting}
+idkey id_dsa
+\end{lstlisting}
+
+bearbeitet oder einbaut. Der Inhalt des öffentlichen Schlüssels muss in der Datei \textit{/ssh/authorized\_keys} hinzugefügt werden.
+
+\begin{lstlisting}
+cat new_key.pub >> .ssh/authorized_keys
+\end{lstlisting}
+
+Jetzt ist der Client und der Server so konfiguriert, dass nur Rechner mit dem privaten Schlüssel Zugriff auf den Server haben über den konfigurierten Port.
+Eine SSH-Verbindung wird mit folgendermaßen aufgebaut:
+\begin{lstlisting}
+ssh -p XXXX benutzer@serverAdresse
+\end{lstlisting}
 
 %%-------------------------------------------------------------------
 \subsection{DNS}
-Um das Raspberry Pi über das lokale Netz erreichbar zu machen, wurde erstmal ein Webserver aufgebaut. Um jetzt das System überall über das Internet erreichbar ist, muss eine Domain reserviert werden. Somit kann ein Benutzer zugriffe auf die Datenbank sowie auf das Videostream aus jedem Rechner oder Android Mobilgerät weltweit ausüben. Der Dienst \”no ip\” bietet solche Dienstleistung kostenlos an. Für dieses Projekt wurde die Adresse \textit{spyhole.no-ip.biz) eingestellt und durch die Freigabe und Weiterleitung von Ports können die programmierten Applikationen auf das Raspberry Pi zugreifen.\\
+Um das Raspberry Pi über das lokale Netz erreichbar zu machen, wurde erstmal ein Webserver aufgebaut. Um jetzt das System überall über das Internet erreichbar ist, muss eine Domain reserviert werden. Somit kann ein Benutzer Zugriffe auf die Datenbank, sowie auf das Videostream aus jedem Rechner oder Android Mobilgerät weltweit ausüben. Der Dienst ``no ip'' bietet solche Dienstleistung kostenlos an. Für dieses Projekt wurde die Adresse \textit{spyhole.no-ip.biz} eingestellt und durch die Freigabe und Weiterleitung von Ports können die programmierten Applikationen auf das Raspberry Pi zugreifen.\\
 
-%%-------------------------------------------------------------------
-\subsection{…}
+Da dieses Projekt im eine privaten Haushalt verwendet wird, besitzt in der Regel der Benutzer keine feste IP Adresse. Deswegen muss die IP Adresse hinter des DNS zyklisch geprüft werden. Der Dienst ``no ip'' stellt ein Programm zur Verfügung, das sich um die Überprüfung der Gültigkeit der IP Adresse kümmert. Das Programm muss dann mit den Kommandos
 
+\begin{lstlisting}
+make
+make install
+\end{lstlisting}
+
+installiert werden. Während der Installation wird von den Benutzer das Login, Passwort und die Aktualisierungszeit verlangt. Danach wird der Dienst mit
+
+\begin{lstlisting}
+/usr/local/bin/noip2
+\end{lstlisting}
+
+gestartet. Der Dienst läuft bis das System runter gefahren wird. Daher ist es ratsam der Dienst im \textit{/etc/init.d} einzutragen.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{OpenVC}
+\section{OpenCV}
+
+Ist eine freie Programmbibliothek(unter BSD-Lizens) mit Algorithmen für Bildverarbeitung und maschinelles sehen. Es beinhaltet C/C++, Python und Java Interfaces und unterstützt Windows, Linux, Mac OS, iOS and Android. OpenCV wird sowohl im kommerziellen wie im privaten Bereich stark benutzt.
 
 %%-------------------------------------------------------------------
 \subsection{Gesichtserkennung}
+Unter die vielen Möglichkeiten das OpenCV anbietet, ist für dieses Projekt die Funktionen der Gesichtserkennung relevant.\\
+
+hier kommt noch text\\
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{MJPG Streamer}
+hier kommt noch text\\
+
 
 %%-------------------------------------------------------------------
 \subsection{subsection}
+
+hier kommt noch text\\
