--- a/kapitel3/ch3.tex
+++ b/kapitel3/ch3.tex
@@ -17,14 +17,13 @@ Das Betriebssystem ist komplett in der Sprache Java programmiert worden. Dabei h
      \label{fig.Prozess}
   \end{center}
 \end{figure}
-
-Die Türspion-App (Spyhole) besteht aus verschiedenen Ebenen sogenannten Activities. Jede Activity stellt eine bestimmte Benutzerschnittstelle dar, wie zum Beispiel der Login oder die Registrierung.
-
-Dabei wird beim Start der ein Splash-Screen angezeigt, die den Benutzer Willkommen heißt und nach einer kurzen Zeit wird, der Nutzer auf die Übersichtsseite weitergeleitet.
+Sobald die Control-View geladen ist verbindet sich das mobile Endgerät mit dem Raspberry Pi. Nachdem die Verbindung aufgebaut wurde, kann der Benutzer der App die Schaltfläche \texttt{Open} betätigen. Nach der erfolgreicher Verbindung zum Server sendet dieser einen kontinuierlichen Live-Stream an das Endgerät. Wenn der Benutzter nun die Schaltfläche \texttt{Open} betätigt, wird ein Befehl zum Öffnen der Tür gesendet und ein GPIO angesteuert, der den Türöffner betätigt, um die Tür zu öffnen.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Login}
-Der Login sollte als Sicherheit in die App eingebaut werden, die Implementierung dieses Teils konnte leider nicht fertiggestellt werden, da bestimmte technische Probleme auftraten, die in der Zeit nicht gelöst werden konnten. Im Folgenden soll aber dennoch die Vorgehensweise beschrieben werden und welche Technologien verwendet worden sind.
+\subsection{Anmelden des Users}
+Um zu verhindern, dass nicht jede Person auf den Stream zugreifen kann, sollte aus Sicherheitsaspekten ein Login implementiert werden. Da aber unerwartete technische Probleme auftraten und diese in der Zeit nicht gelöst werden konnte wurde dieser Aspekt, erst einmal beiseite gestellt.
+Jedoch wird im Folgenden auf die Vorgehensweise eingegangen, welche Technologien verwendet worden sind und wie der Login- und Registrierungsprozess ablaufen soll beschrieben.
+
 \subsubsection{Registrierung}
 \begin{figure}[h]
   \begin{center}
@@ -33,13 +32,28 @@ Der Login sollte als Sicherheit in die App eingebaut werden, die Implementierung
      \label{fig.Prozess}
   \end{center}
 \end{figure}
-Um sich überhaupt einloggen zu können muss sich der Benutzer erst einmal registrieren. Dabei muss der Nutzer seine 
+
+Um sich überhaupt einloggen zu können muss sich der Benutzer beim aller ersten Mal  mit seinen Kontaktdaten registrieren. Dabei muss der Nutzer seine 
 \begin{itemize}
 	\item{E-Mail}
 	\item{Nutzername}
 	\item{Passwort}
 \end{itemize}
-eingeben. Diese Daten werden alle in ein JSON-Objekt geschrieben und per POST-Methode an den Server gesendet. Auf dem Server wird in der Index.php erkannt, dass sich ein neuer Nutzer anmelden möchte dem entsprechend wird in einer Mehrfachauswahl (Switch-Case) ausgewertet und in einem weiteren PHP-Skript weiter bearbeitet. Schlussendlich werden die Daten in eine MySQL-Datenbank in die jeweiligen Spalten geschrieben. Das eingegebene Passwort beim Eintragen in die Datenbank verschlüsselt, dass mögliche Hacker die das Password nicht auslesen können. 
+eingeben.
+Das Framework Android-SDK bietet es dem Nutzer an die grafische Oberfläche von der eigentlich Logik zu trennen. Die grafischen Oberflächen werden als Views betitelt. Die Views werden mithilfe von XML gestaltet.
+\begin{lstlisting}[caption={Android - Button erstellen},captionpos=b]
+<Button
+       android:id="@+id/btnLinkToLoginScreen"
+       android:layout_width="fill_parent"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="40dip"
+       android:background="@null"
+       android:text="Already registred. Log Me In!"
+       android:textColor="#21dbd4"
+       android:textStyle="bold" />
+\end{lstlisting}
+In dem obigen Codebeispiel wird ein Button in der View erzeugt. Dabei wird dieser mit einer sog. ID versehen, um den Button über diese ID aus dem Quellcode ansprechen zu können. Mithilfe von \texttt{android:layout\_width} und \texttt{android:layout\_height} wird die Höhe und Breite des Buttons beschrieben. Die Option \texttt{fill\_parent} lässt den Button über die ganze Breite des Bildschirmes anzeigen, abhängig von der Auflösung des Endgerätes. Die Option \texttt{wrap\_content} lässt den Button nur so groß werden, dass alle Inhalte gut zu erkennen sind.
+Diese Daten werden alle in ein JSON-Objekt geschrieben und per POST-Methode an den Server gesendet. Auf dem Server wird in der Index.php erkannt, dass sich ein neuer Nutzer anmelden möchte dem entsprechend wird in einer Mehrfachauswahl (Switch-Case) ausgewertet und in einem weiteren PHP-Skript weiter bearbeitet. Schlussendlich werden die Daten in eine MySQL-Datenbank in die jeweiligen Spalten geschrieben. Das eingegebene Passwort beim Eintragen in die Datenbank verschlüsselt, dass mögliche Hacker die das Password nicht auslesen können. 
 \subsubsection{Der eigentliche Login}
 \begin{figure}[h]
   \begin{center}
