--- a/kapitel2/ch2.tex
+++ b/kapitel2/ch2.tex
@@ -178,6 +178,82 @@ installiert werden. Während der Installation wird von den Benutzer das Login, P
 \end{lstlisting}
 
 gestartet. Der Dienst läuft bis das System runter gefahren wird. Daher ist es ratsam der Dienst im \textit{/etc/init.d} einzutragen.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Datenbanken}
+Hier wird über die Datenbank und der Aufbau der Tabellen beschrieben. Als Datenbank benutzen wir MySQL-Server zur Speicherung der Daten. Zur Verwaltung der Daten in der Datenbank verwenden wir das Tool \texttt{phpMyAdmin}.
+
+\subsubsection{Was ist SQL ?}
+SQL ist einer der verbreitetsten Standards, um eine Kommunikation zwischen Server und Client mit Datenbanken zu ermöglichen. Mit SQL ist es möglich, Daten aus einer Datenbank zu selektieren, einzutragen, zu aktualisieren und zu löschen. Auch besteht die Möglichkeit mit Hilfe der SQL Tabellen in einer Datenbank zu erstellen, zu modifizieren oder zu löschen. Integriert ist ebenfalls eine Zugriffsverwaltung auf die Tabellen. 
+
+Das Schema der Datenbank legt fest, welche Daten in einer Datenbank in welcher Form gespeichert werden können und welche Beziehungen zwischen den Daten bestehen. Insbesondere bei relationalen Datenbanken legt das Schema die Tabellen und deren Attribute sowie zur Sicherstellung der Konsistenz die Integritätsbedingungen fest. Dabei wird auch speziell der Primärschlüssel bzw. die Eindeutigkeitsbedingungen festgelegt.
+
+\subsubsection{Was ist phpMyAdmin ?}
+\texttt{phpMyAdmin} ist ein freies praktisches PHP-Tool zur Verwaltung von MySQL-Datenbanken. Das Tool bietet die Möglichkeit über HTTP mit einem Browser in MySQL neue Datenbanken zu erstellen bzw. zu löschen. Des Weiteren erlaubt das Tool die Erstellung, Löschung und Veränderung von Tabellen und Datensätzen. Auch die Verwaltung von Schlüssel-Attributen ist implementiert. Eine Anwendungsmöglichkeit des Tools \texttt{phpMyAdmin} ist die SQL-Statements direkt auszuführen und somit eine ausführliche grafische Abfrage der vorhandenen Daten in Form von Tabellen darzustellen. Für die Bedienung des Tools sind kaum Kenntnisse in SQL erforderlich, da das Tool nach dem WYSIWYG\footnote{ist das Akronym für das Prinzip „\textbf{W}hat \textbf{Y}ou \textbf{S}ee \textbf{I}s \textbf{W}hat \textbf{Y}ou \textbf{G}et“ (deutsch „Was du siehst, ist was du bekommst.“).} - Prinzip arbeitet.
+
+\subsubsection{Aufbau}
+\lstset{language=SQL,
+				backgroundcolor=\color{light-gray},
+				%frame=single,
+				tabsize=2,
+				%numbers=left,
+				numbersep=5pt,
+				%numberstyle=\color{light-gray},
+				basicstyle=\ttfamily\color{black}\small,
+				keywordstyle=\color{HKS51}\bfseries,
+				commentstyle=\color{HKS13}\slshape,,
+				identifierstyle=\color{blue},
+				stringstyle =\color{orange}}
+				
+Die Datenbank \texttt{db\_spyhole} besteht aus drei Tabellen (tb\_doorloggers, tb\_users und tb\_images). In der  Tabelle \texttt{tb\_doorloggers} werden die Aktivitäten an der Tür gespeichert \textbf{(?)}, in der Tabelle \texttt{tb\_users} sind die registierte Users gespeichert, und die Tabelle \texttt{tb\_images} dient zur Speicherung der Bilder \textbf{(welche Bilder? Kommt noch dazu}).  
+
+Ich werde den Aufbau der drei Tabellen genauer beschreiben:
+\begin{lstlisting}[caption={Aufbau der Datenbanktabellen},captionpos=b]
+--
+-- Tabellenstruktur für Tabelle `tb\_doorlogger`
+--
+
+CREATE TABLE IF NOT EXISTS `tb\_doorlogger` (
+  `ID` int(8) NOT NULL AUTO\_INCREMENT,
+  `U\_ID` int(8) NOT NULL,
+  `date` datetime NOT NULL,
+  PRIMARY KEY (`ID`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8\_unicode\_ci AUTO\_INCREMENT=1 ;
+-- --------------------------------------------------------
+
+--
+-- Tabellenstruktur für Tabelle `tb\_images`
+--
+
+CREATE TABLE IF NOT EXISTS `tb\_images` (
+  `ID` int(8) NOT NULL AUTO\_INCREMENT,
+  `dl\_ID` int(8) NOT NULL,
+  `U\_ID` int(8) NOT NULL,
+  `imgdata` longblob,
+  `imgtype` varchar(32) COLLATE utf8\_unicode\_ci DEFAULT NULL,
+  PRIMARY KEY (`ID`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8\_unicode\_ci AUTO\_INCREMENT=1 ;
+
+-- --------------------------------------------------------
+
+--
+-- Tabellenstruktur für Tabelle `tb\_user`
+--
+
+CREATE TABLE IF NOT EXISTS `tb\_user` (
+  `ID` int(8) NOT NULL AUTO\_INCREMENT,
+  `name` varchar(64) COLLATE utf8\_unicode\_ci NOT NULL,
+  `firstname` varchar(64) COLLATE utf8\_unicode\_ci NOT NULL,
+  `email` varchar(128) COLLATE utf8\_unicode\_ci NOT NULL,
+  `user` varchar(16) COLLATE utf8\_unicode\_ci NOT NULL,
+  `password` varchar(255) CHARACTER SET utf8 COLLATE utf8\_bin NOT NULL,
+  `u\_timestamp` timestamp NOT NULL DEFAULT '0000-00-00 00:00:00' ON UPDATE CURRENT\_TIMESTAMP,
+  PRIMARY KEY (`ID`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8\_unicode\_ci AUTO\_INCREMENT=1 ;
+
+\end{lstlisting}
+Das Attribut „ID“ vom Typ „INT“ kann Werte von  -2147483648 bis 2147483647 erfassen. Die Attribute vom Typ „VARCHAR()“ können beliebige Zeichenkombinationen speichern. Die maximale Zeichenlänge ist dabei von der in der Klammer befindlichen Zahl abhängig. Der Befehl „NOT NULL“ in der Definition der Attribute bewirkt, dass die entsprechende Spalte mit Daten vorhanden sein muss, sobald ein neuer Datensatz angelegt wird. Anders sieht es aber beim Befehl „DEFAULT NULL“ aus, dass die entsprechende Spalte nicht zwingend mit Daten gefüllt werden muss und standardmäßig auf NULL gesetzt wird, wenn ein neuer Datensatz keine Daten enthält. Das Attribut „ID“ wird als Primärschlüssel (Befehl „PRIMARY KEY (`ID`)“ definiert und mit AUTO\_INCREMENT zusätzlich ausgestattet. Das hat die folgende Bedeutung, dass das Attribut „ID“ fortlaufend um eins erhöht wird, wenn ein neuer Datensatz hinzufügt wird. Ein Primärschlüssel dient der eindeutigen Identifizierung der einzelnen Zeilen in einer Tabelle. 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{OpenCV}
 
