--- a/kapitel1/ch1.tex
+++ b/kapitel1/ch1.tex
@@ -6,3 +6,8 @@
 %%
 
 \chapter{Einleitung}
+Der stetige technologische Fortschritt sorgt in allen Lebensbereichen für immer neue Erfindungen und Ideen. Eine der größten Entwicklungsbereiche für Privatanwender liegt im intelligenten Wohnen. Hierbei handelt es sich im Allgemeinen um technische Hilfsmittel, die einer Person oder einer Personengruppe das Leben erleichtert. Diese Entwicklung dieser Gerätewird durch leistungsfähige Hardware sowie die mächtigen Entwicklungswerkzeuge ermöglicht. Die geringen Kosten und die Umfangreiche Dokumentation im Internet machen es auch Privatanwendern möglich ihre eigenen Ideen zu verwirklichen.  
+\par
+Ein Teilbereich vom intelligenten Wohnen ist die Überwachung, in den sich auch dieses Projekt einordnen lässt. Mit dem Spyhole soll es möglich werden für Bewohner Kontrolle und Sicherheit über die Haupteingangstür zu bekommen. Die Idee ist, von überall und jederzeit durch den Torsion seiner Behausung gucken zu können. Weiterhin ist das ferngesteuerte Öffnen sowie das Abfragen der letzten Besucher eine erstrebenswerte Funktionalität. In Zeiten dauerhafter Vernetzung und der Smartphones steht es auch außer Frage, dass eine entsprechende Applikation für diese Systeme bereitgestellt werden muss. Es ist jedoch ebenso an Alternativsysteme zu denken, da es zur Projektvision gehört den Zugriff von überall zu ermöglichen. 
+\par
+Als Grundlage für dieses Projekt soll dabei Hardwareseitig das Rasberry Pi verwendet werden, worauf in Kapitel 2 eingegangen wird. In Kapitel 3 wird die Android App beschrieben und auf dessen Funktionalitäten eingegangen. Auf Deskop App wird in Kapitel 4 genauer eingegangen. Eine Zusammenfassung der Ergebnisse und eine Reflektion über den Projektverlauf können in Kapitel 5 nachvollzogen werden. 
