Zusammenfassung mit Rechtschreibfehlern ;)

--- a/kapitel5/ch5.tex
+++ b/kapitel5/ch5.tex
@@ -6,3 +6,10 @@
 %%	
 
 \chapter{Zusammenführung und Ausblick}
+Im Rahmen dieses Projekts waren vielfältige Software- sowie Hardwareentwicklungen umzusetzen. Durch die breit gefächerte Schnittstellenanforderung mussten für entsprechend viele Benutzerschnittstellen Anwendungen entwickelt werden. Da die Kommunikationsschnittstellen leicht abgesteckt werden konnten und die verschiedenen Systeme keine weiteren Überschneidungen hatten, waren Arbeitstakte leicht auf die Systeme zu verteilen. 
+\par
+Das Erste Arbeitspacket umfasste die Ansteuerung der Hardware des Rasberry Pi und der Kamera. Außerdem musste auf dem Rasberry ein Webserver aufgesetzt werden, welcher für die Kommunikation mit den andern System sorgt. Ein Datenbankserver zum Verwalten der Nutzer und katalogisieren der Zugänge in die Wohnung, sowie eine Gesichtserkennungssoftware für die Identifikation der Personen vor der Tür sind weitere Teile in diesem Arbeitspacket.
+\par
+Die Arbeitspackete zwei und Drei können aufgrund der Analogien gemeinsam zusammengefasst werden. Hierbei handelte es sich um die Entwicklung einer Android App einerseits und der Entwicklung deiner Desktopumgebung andererseits. Das Einbinden von des Videosignals vom Rasberry sowie die Benutzerfreundliche Gestaltung der Benutzeroberflächen waren hier elementaren Herausforderungen. Da es sich bei den Entwicklungsumgebungen der jeweiligen Systeme um umfangreiche und mächtige Tools und unbekannte Programmiersprechen handelt, ist ein großer Teil der Arbeit in das Kennenlernen der Tools und Programmiersprachen geflossen. Die eigentlichen Umsetzungen fielen teilweise dafür umso weniger Aufwändig aus. 
+\par
+Durch die klare Struktur des Projekts und des nachvollziehbaren Anwendungsgebiets konnte dieses Projekt entsprechend der gestellten Aufgabenstellung umgesetzt werden. In zukünftigen Weiterentwicklungen des Projekts sollten Apps für iOS, Blackberry und Windows Mobile nachgereicht werden. 
